# INDED-Dissertation-Code

./: .gitignore  ADJ1.NEG  ADJ1.POS  ADJ2.NEG  ADJ2.POS  ATOM.CC  ATOM.H  ATOM.cpp  AUTO1.EDB  AUTO1.NEG  AUTO1.POS  AUTOSAFE.EDB  AUTOSAFE.IDB  AUTOSAFE.INT  BACK.CC  BACK.H  BACK.cpp  BODY.CC  BODY.H  BODY.cpp  BUTTERFL.NEG  BUTTERFL.POS  CMakeLists.txt  CONAPP.CC  CONAPP.H  CONAPP.cpp  CONCLASS.CC  CONCLASS.H  CONCLASS.cpp  CONST.H  CYCLE1.NEG  CYCLE2.NEG  CYCLE2.POS  EEEKS.CC  EEEKS.cpp  EXAMPSET.CC  EXAMPSET.H  EXAMPSET.cpp  FAMILY.IDB  FULL.CC  (+87 more)
