project(INDED)

cmake_minimum_required(VERSION 3.1)

set(CMAKE_CXX_STANDARD 11)
#SET(CMAKE_CXX_FLAGS "-I"${CMAKE_CURRENT_SOURCE_DIR})

#set(CMAKE_CXX_FLAGS "-I/Users/phillipseitzer/workspace/INDED-Dissertation-Code -L/Users/phillipseitzer/workspace/INDED-Dissertation-Code")

SET(SRC_LIST
        ATOM.CC
	CONCLASS.CC
	INDUC.CC
	LIST.CC
        MAIN.cpp
	PREDLOG.CC
	UTILITY.CC
	BACK.CC
	EEEKS.CC
	INTRULE.CC
	LITERAL.CC
	NODE.CC
	PREDSYM.CC
	VARIABLE.CC
	BODY.CC
	EXAMPSET.CC
	INTSET.CC
	LOGIC_PR.CC
	POS.CC
	RULE.CC
	VERTEX.CC
	CONAPP.CC
	FULL.CC
	KB.CC
	LPCONS.CC
	PREDEXP.CC
	SPANTREE.CC
	VERTPTR.CC
#	ATOM.H
#	BACK.H
#	BODY.H
#	CONAPP.H
#	CONCLASS.H
#	CONST.H
#	EXAMPSET.H
#	FULL.H
#	INDUC.H
#	INTRULE.H
#	INTSET.H
#	KB.H
#	LITERAL.H
#	LOGIC_PR.H
#	NODE.H
#	POS.H
#	PREDEXP.H
#	PREDLOG.H
#	PREDSYM.H
#	RULE.H
#	SPANTREE.H
#	UTILITY1.H
#	UTILITY2.H
#	VARIABLE.H
#	VERTEX.H
#	VERTPTR.H
)

SET(CMAKE_INCLUDE_CURRENT_DIR ${CMAKE_CURRENT_SOURCE_DIR})

message(${CMAKE_INCLUDE_CURRENT_DIR})

include_directories(${CMAKE_INCLUDE_CURRENT_DIR})

add_executable(${PROJECT_NAME} MAIN.cpp ${SRC_LIST})

target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

target_link_directories(${PROJECT_NAME} BEFORE PUBLIC ${CMAKE_INCLUDE_CURRENT_DIR})
